--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,24 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "django>=6.0,<7.0",
+    "djangorestframework==3.16.1",
+    "django-filter==25.2",
+    "drf-spectacular==0.29.0",
+    "django-health-check>=3.18",
+    "whitenoise>=6.11.0",
+    "django-redis>=5.4.0",
+    "django-simple-history>=3.8.0",
+    "django-daisy>=2.0.5",
+    # celery
+    "celery>=5.6.0",
+    "redis>=7.1.0",
+    # utils
+    "psutil>=7.1.2",
+    # server
+    "gunicorn>=23.0.0",
+    "django-brotli>=0.4.0",
+    # debug
+    "django-debug-toolbar==5.2.0",
 ]
 
 [build-system]
