--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "redis>=7.1.0",
     # utils
     "psutil>=7.1.2",
+    "mistune>=3.2.0",
     # server
     "gunicorn>=23.0.0",
     "django-brotli>=0.4.0",
