--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ dependencies = [
     # utils
     "psutil>=7.1.2",
     "mistune>=3.2.0",
+    # webdav
+    "wsgidav>=4.3.0",
     # server
     "gunicorn>=23.0.0",
     "django-brotli>=0.4.0",
