--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ dependencies = [
     # utils
     "psutil>=7.2.2",
     "mistune>=3.2.0",
+    "dj-database-url>=2.3.0",
+    "psycopg[binary,pool]>=3.2.0",
     # webdav
     "wsgidav>=4.3.0",
     # server
