--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
     # celery
     "celery>=5.6.2",
     "redis>=7.1.0",
+    # imaging
+    "pillow>=11.0",
     # utils
     "psutil>=7.2.2",
     "mistune>=3.2.0",
