--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "redis>=7.1.0",
     # imaging
     "pillow>=11.0",
+    "cairosvg>=2.7.0",
     # utils
     "psutil>=7.2.2",
     "mistune>=3.2.0",
