feat(mail): implement mail module with core features
- Add models for mail accounts, folders, messages, and attachments.
- Introduce IMAP-based synchronization for folders and messages.
- Create admin and Django configurations for mail management.
- Add folder and message handling logic with specialized constraints and indexing.
- Introduce Fernet-based encryption for secure storage of credentials.
- Implement UI components for managing accounts, folders, and composing emails.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ dependencies = [
     # imaging
     "pillow>=11.0",
     "cairosvg>=2.7.0",
+    # mail
+    "cryptography>=44.0.0",
+    "nh3>=0.2.20",
     # utils
     "psutil>=7.2.2",
     "mistune>=3.2.0",
