feat(mail): add auto-discovery for mail account settings
- Implement auto-discovery functionality for IMAP/SMTP settings based on email domain.
- Add `autodiscoverSettings` method in the mail UI for user-triggered auto-configuration.
- Introduce a new API endpoint to handle auto-discovery using `myl-discovery`.
- Update `pyproject.toml` to include `myl-discovery` and dependencies.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     # mail
     "cryptography>=44.0.0",
     "nh3>=0.2.20",
+    "myl-discovery>=0.6.4",
     # utils
     "psutil>=7.2.2",
     "mistune>=3.2.0",
