feat(metrics): integrate Prometheus for app monitoring
- Add `django-prometheus` for collecting app metrics.
- Update settings, middleware, and database backends for Prometheus support.
- Expose `/metrics` endpoint and restrict access via ingress.
- Instrument SSE connections with Prometheus gauges.
- Update dependency files (`pyproject.toml`, `uv.lock`) and feature roadmap.

--- a/docs/deployments/ingress.yaml
+++ b/docs/deployments/ingress.yaml
@@ -5,6 +5,12 @@ metadata:
   namespace: workspace
   annotations:
     nginx.ingress.kubernetes.io/proxy-body-size: "100m"
+    # Block /metrics from public access (Prometheus scrapes via ClusterIP)
+    nginx.ingress.kubernetes.io/server-snippet: |
+      location /metrics {
+        deny all;
+        return 403;
+      }
 spec:
   ingressClassName: nginx
   tls:
