--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "gunicorn>=24.1.1",
     "django-brotli>=0.4.0",
     "gevent>=25.9.1",
+    "django-prometheus>=2.4.0",
 ]
 
 [build-system]
