--- a/docs/deployments/kubernetes/configmap.yaml
+++ b/docs/deployments/kubernetes/configmap.yaml
@@ -12,3 +12,5 @@ data:
   DJANGO_LOG_LEVEL: "INFO"
   TRASH_RETENTION_DAYS: "30"
   MEDIA_ROOT: "/app/data"
+  WEBPUSH_VAPID_PUBLIC_KEY: ""
+  WEBPUSH_VAPID_MAILTO: ""
