--- a/docs/deployments/kubernetes/secrets.yaml
+++ b/docs/deployments/kubernetes/secrets.yaml
@@ -8,3 +8,4 @@ stringData:
   SECRET_KEY: "change-me-to-a-real-secret-key"
   DATABASE_URL: "sqlite:////app/data/db.sqlite3"
   REDIS_URL: "redis://localhost:6379/0"
+  WEBPUSH_VAPID_PRIVATE_KEY: ""
