chore(json): replace `json` with `orjson` for improved performance in serialization

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "djangorestframework==3.16.1",
     "django-filter==25.2",
     "drf-spectacular==0.29.0",
+    "drf-orjson-renderer>=1.7.0",
     "whitenoise>=6.11.0",
     "django-redis>=5.4.0",
     "django-simple-history>=3.8.0",
