--- a/docs/deployments/kubernetes/secrets.yaml
+++ b/docs/deployments/kubernetes/secrets.yaml
@@ -7,5 +7,5 @@ type: Opaque
 stringData:
   SECRET_KEY: "change-me-to-a-real-secret-key"
   DATABASE_URL: "sqlite:////app/data/db.sqlite3"
-  REDIS_URL: "redis://localhost:6379/0"
+  REDIS_URL: "redis://localhost:6379"
   WEBPUSH_VAPID_PRIVATE_KEY: ""
