feat(mail): add OAuth2 support for mail account authentication
- Introduce OAuth2 helpers for Google, Microsoft, and generic providers in `oauth2.py`.
- Add `oauth2_callback.html` template for handling the callback post OAuth2 flow.
- Create comprehensive unit tests for OAuth2 functionality in `test_oauth2.py`.
- Implement `OAuthProvidersView`, `OAuthAuthorizeView`, and `oauth2_callback` for endpoints.
- Enhance UI with OAuth2 buttons to simplify account addition.
- Update IMAP/SMTP logic to handle OAuth2 authentication seamlessly.

--- a/docs/deployments/docker-compose/docker-compose.yml
+++ b/docs/deployments/docker-compose/docker-compose.yml
@@ -14,6 +14,20 @@ services:
       - WEBPUSH_VAPID_PRIVATE_KEY=${WEBPUSH_VAPID_PRIVATE_KEY:-}
       - WEBPUSH_VAPID_PUBLIC_KEY=${WEBPUSH_VAPID_PUBLIC_KEY:-}
       - WEBPUSH_VAPID_MAILTO=${WEBPUSH_VAPID_MAILTO:-}
+      # OAuth2 Mail Providers (optional)
+      - OAUTH_GOOGLE_CLIENT_ID=${OAUTH_GOOGLE_CLIENT_ID:-}
+      - OAUTH_GOOGLE_CLIENT_SECRET=${OAUTH_GOOGLE_CLIENT_SECRET:-}
+      - OAUTH_MICROSOFT_CLIENT_ID=${OAUTH_MICROSOFT_CLIENT_ID:-}
+      - OAUTH_MICROSOFT_CLIENT_SECRET=${OAUTH_MICROSOFT_CLIENT_SECRET:-}
+      # Generic OAuth2 provider (optional, for custom providers)
+      - OAUTH_GENERIC_CLIENT_ID=${OAUTH_GENERIC_CLIENT_ID:-}
+      - OAUTH_GENERIC_CLIENT_SECRET=${OAUTH_GENERIC_CLIENT_SECRET:-}
+      - OAUTH_GENERIC_NAME=${OAUTH_GENERIC_NAME:-}
+      - OAUTH_GENERIC_AUTH_URL=${OAUTH_GENERIC_AUTH_URL:-}
+      - OAUTH_GENERIC_TOKEN_URL=${OAUTH_GENERIC_TOKEN_URL:-}
+      - OAUTH_GENERIC_SCOPES=${OAUTH_GENERIC_SCOPES:-}
+      - OAUTH_GENERIC_IMAP_HOST=${OAUTH_GENERIC_IMAP_HOST:-}
+      - OAUTH_GENERIC_SMTP_HOST=${OAUTH_GENERIC_SMTP_HOST:-}
     volumes:
       - workspace-data:/app/data
     restart: unless-stopped
@@ -29,6 +43,20 @@ services:
       - WEBPUSH_VAPID_PRIVATE_KEY=${WEBPUSH_VAPID_PRIVATE_KEY:-}
       - WEBPUSH_VAPID_PUBLIC_KEY=${WEBPUSH_VAPID_PUBLIC_KEY:-}
       - WEBPUSH_VAPID_MAILTO=${WEBPUSH_VAPID_MAILTO:-}
+      # OAuth2 Mail Providers (optional)
+      - OAUTH_GOOGLE_CLIENT_ID=${OAUTH_GOOGLE_CLIENT_ID:-}
+      - OAUTH_GOOGLE_CLIENT_SECRET=${OAUTH_GOOGLE_CLIENT_SECRET:-}
+      - OAUTH_MICROSOFT_CLIENT_ID=${OAUTH_MICROSOFT_CLIENT_ID:-}
+      - OAUTH_MICROSOFT_CLIENT_SECRET=${OAUTH_MICROSOFT_CLIENT_SECRET:-}
+      # Generic OAuth2 provider (optional, for custom providers)
+      - OAUTH_GENERIC_CLIENT_ID=${OAUTH_GENERIC_CLIENT_ID:-}
+      - OAUTH_GENERIC_CLIENT_SECRET=${OAUTH_GENERIC_CLIENT_SECRET:-}
+      - OAUTH_GENERIC_NAME=${OAUTH_GENERIC_NAME:-}
+      - OAUTH_GENERIC_AUTH_URL=${OAUTH_GENERIC_AUTH_URL:-}
+      - OAUTH_GENERIC_TOKEN_URL=${OAUTH_GENERIC_TOKEN_URL:-}
+      - OAUTH_GENERIC_SCOPES=${OAUTH_GENERIC_SCOPES:-}
+      - OAUTH_GENERIC_IMAP_HOST=${OAUTH_GENERIC_IMAP_HOST:-}
+      - OAUTH_GENERIC_SMTP_HOST=${OAUTH_GENERIC_SMTP_HOST:-}
     volumes:
       - workspace-data:/app/data
     restart: unless-stopped
