--- a/docs/deployments/kubernetes/secrets.yaml
+++ b/docs/deployments/kubernetes/secrets.yaml
@@ -9,3 +9,15 @@ stringData:
   DATABASE_URL: "sqlite:////app/data/db.sqlite3"
   REDIS_URL: "redis://localhost:6379"
   WEBPUSH_VAPID_PRIVATE_KEY: ""
+  OAUTH_GOOGLE_CLIENT_ID: ""
+  OAUTH_GOOGLE_CLIENT_SECRET: ""
+  OAUTH_MICROSOFT_CLIENT_ID: ""
+  OAUTH_MICROSOFT_CLIENT_SECRET: ""
+  OAUTH_GENERIC_CLIENT_ID: ""
+  OAUTH_GENERIC_CLIENT_SECRET: ""
+  OAUTH_GENERIC_NAME: ""
+  OAUTH_GENERIC_AUTH_URL: ""
+  OAUTH_GENERIC_TOKEN_URL: ""
+  OAUTH_GENERIC_SCOPES: ""
+  OAUTH_GENERIC_IMAP_HOST: ""
+  OAUTH_GENERIC_SMTP_HOST: ""
