--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,8 @@ dependencies = [
     "django-prometheus>=2.4.0",
     # push notifications
     "pywebpush>=2.3.0",
+    # oauth2
+    "authlib>=1.5.0",
 ]
 
 [build-system]
